--- a/index.html
+++ b/index.html
@@ -1,81 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Note Map</title>
+    <title>Document</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="./assets/style.css" />
+    <!-- CSS LINK -->
+    <link rel="stylesheet" href="assets/style.css" />
+
+    <!-- BS ICON LINK -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 
     <!-- leaflet kütüphanesi css -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+  </head>
 
-    <!-- bs icons css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-</head>
-
-<body>
-    <!-- Side bar -->
+  <body>
+    <!--SIDEBAR-->
     <aside>
-        <div class="sidebar">
-            <h1>Notes</h1>
-            <h1 id="add-title">New Notes</h1>
+      <div class="head">
+        <h1>Notlar</h1>
+        <h1 id="add-title">Yeni Not</h1>
 
-            <form>
-                <div class="field">
-                    <label>Title</label>
-                    <input type="text" required />
-                </div>
+        <i id="arrow" class="bi bi-chevron-up"></i>
+      </div>
 
-                <div class="field">
-                    <label>Date</label>
-                    <input type="date" required />
-                </div>
-
-                <div class="field">
-                    <label>Situation</label>
-                    <select required>
-              <option value="" disabled selected>Select...</option>
-              <option value="goto">Visit</option>
-              <option value="park">Car Park</option>
-              <option value="home">Home</option>
-              <option value="job">Job</option>
-            </select>
-                </div>
-
-                <div class="buttons">
-                    <button>Cancel</button>
-                    <button>Add</button>
-                </div>
-            </form>
-            <ul>
-                <li>
-                    <div>
-                        <p>Station -1</p>
-                        <p>Date: 16.September 2024</p>
-                        <p>Situation: Work</p>
-                    </div>
-                    <div class="icons">
-                        <i class="bi bi-airplane-fill" id="fly"></i>
-                        <i class="bi bi-trash3-fill" id="delete"></i>
-                    </div>
-                </li>
-                <li></li>
-                <li></li>
-            </ul>
+      <form>
+        <div class="field">
+          <label>Başlık</label>
+          <input type="text" required />
         </div>
+
+        <div class="field">
+          <label>Tarih</label>
+          <input type="date" required />
+        </div>
+
+        <div class="field">
+          <label>Durum</label>
+          <select required>
+            <option value="" disabled selected>Seçiniz...</option>
+            <option value="goto">Ziyaret</option>
+            <option value="park">Park Yeri</option>
+            <option value="home">Ev</option>
+            <option value="job">İş</option>
+          </select>
+        </div>
+
+        <div class="buttons">
+          <button id="cancel">İptal</button>
+          <button>Ekle</button>
+        </div>
+      </form>
+
+      <ul>
+        <li>
+          <div>
+            <p>Durak - 1</p>
+            <p>16 May 2024</p>
+            <p>İş</p>
+          </div>
+
+          <div class="icons">
+            <i class="bi bi-star" id="favorite"></i>
+            <i class="bi bi-airplane-fill" id="fly"></i>
+            <i class="bi bi-trash3-fill" id="delete"></i>
+          </div>
+        </li>
+      </ul>
     </aside>
 
-    <!--  MAP  -->
+    <!-- MAP -->
     <div id="map"></div>
 
-    <!-- Js -->
-    <script type="module" src="./scripts/main.js"></script>
-
     <!-- leaflet kütüphanesi js -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-</body>
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
 
+    <!-- JS LINK-->
+    <script src="scripts/main.js" type="module"></script>
+  </body>
 </html>
